# openclaw-voice

./: README.md  pyproject.toml
assets/reference/: reference.txt
config/: config.yaml
docs/: index.html  styles.css
examples/: long_text_es.txt
skill/openclaw-voice/: SKILL.md
src/: main.py
src/openclaw_voice/: __init__.py  __main__.py  audio.py  chunking.py  cli.py  config.py  service.py  tts.py
src/openclaw_voice.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/openclaw_voice/messaging/: __init__.py  base.py  discord_provider.py  factory.py
