[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openclaw-voice"
version = "0.1.1"
description = "A pipx-installable Qwen TTS CLI for OpenClaw voice synthesis."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Arrase" }
]
dependencies = [
  "discord.py>=2.5.2",
  "langchain-text-splitters>=0.3.8",
  "lameenc>=1.8.1",
  "numpy>=2.0.0",
  "PyYAML>=6.0.0",
  "qwen-tts>=0.1.1",
  "typer>=0.12.0",
]

[project.scripts]
openclaw-voice = "openclaw_voice.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
